[package]
name = "fuwane-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuwane-foundation = { git = "https://github.com/fuwane/foundation.git" }
tokio = { version = "1.27.0", features = ["sync", "rt"] }
extism-pdk = "0.3.1"
extism-pdk-derive = "0.3.0"
serde_json = "1.0.96"
once_cell = "1.17.1"
serde = "1.0.160"
serde-big-array = "0.5.1"
anyhow = "1.0.71"
